--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		
+		<title>home</title>
+		
 		%sveltekit.head%
 	</head>
 	<body>
