--- a/app/src/app.html
+++ b/app/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<title>home</title>
+		<title>fort</title>
 		
 		%sveltekit.head%
 	</head>
