--- a/app/src/app.html
+++ b/app/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
+	  <meta name="description" content="fort. a minimalist alternative to nextcloud." />
 		
 		<title>fort</title>
 		
